@@ -1,3 +1,9 @@
+2015-04-12  Corinna Vinschen  <corinna@vinschen.de>
+
+	* shm.cc (shmget): Fetch segment size from server rather than using
+	size argument to accommodate existing segments.  Add comment to explain
+	why.
+
 2015-04-11  Corinna Vinschen  <corinna@vinschen.de>
 
 	* fhandler_disk_file.cc (fhandler_disk_file::fchmod): Fix typo in
